--- a/.github/workflows/refresh_python.yml
+++ b/.github/workflows/refresh_python.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Set up Homebrew
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
-      - name: Set up git
-        uses: Homebrew/actions/git-user-config@master
+      - name: Update brew
+        run: brew update && brew upgrade
 
       - name: Add tap
         run: brew tap gtaylor/baymesh
