ci: Try to silence brew doctor warnings

--- a/.github/workflows/refresh_python.yml
+++ b/.github/workflows/refresh_python.yml
@@ -27,7 +27,7 @@ jobs:
         run: rm /opt/homebrew/Library/Taps/gtaylor/homebrew-baymesh/Formula/baymesh.rb
 
       - name: Run brew doctor
-        run: brew doctor
+        run: brew doctor --verbose
 
       - name: Regenerate Python Formulas
         run: brew create --python https://files.pythonhosted.org/packages/e7/19/fad6f32d430ac1dc44d6cb49cd4245fdb51b840c338e092489463ba50635/baymesh-0.3.3.tar.gz --verbose
