ci: Move scripts to subdir

--- a/.github/workflows/refresh_python.yml
+++ b/.github/workflows/refresh_python.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   refresh:
-    runs-on: macos-latest
+    runs-on: macos-15
     permissions:
       contents: write
     steps:
