--- a/.github/workflows/bump-homebrew.yml
+++ b/.github/workflows/bump-homebrew.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   bump:
-    runs-on: ubuntu-latest
+    runs-on: macos-15
     steps:
       - name: Update Homebrew formula
         uses: dawidd6/action-homebrew-bump-formula@v4
