--- a/.github/workflows/refresh_python.yml
+++ b/.github/workflows/refresh_python.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Run brew config
         run: brew config
 
-      - name: Run brew doctor
-        run: brew doctor
+      #- name: Run brew doctor
+        #run: brew doctor
 
       # Remove old formula in the repo, re-run brew create, apply diffs.
       - name: Regenerate Python formulas
